objects/tffa__RESTLinkConfiguration__mdt.object
<CustomObject>
    <description>Configure REST Paths for HATEOAS Links</description>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the REST path is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Method__c</fullName>
        <description>The HTTP Method</description>
        <inlineHelpText>The HTTP Method for the relation</inlineHelpText>
        <label>HTTP Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ObjectName__c</fullName>
        <description>The sobject name as identified by the system</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Path__c</fullName>
        <description>The relative path url for the REST</description>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Relation__c</fullName>
        <description>The Link relation</description>
        <label>Link Relation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>REST Link Configuration</label>
    <listViews>
        <fullName>tffa__REST_Configuration</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>tffa__ObjectName__c</columns>
        <columns>tffa__Path__c</columns>
        <columns>tffa__Method__c</columns>
        <columns>tffa__Relation__c</columns>
        <columns>tffa__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>REST Configuration</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>REST Link Configurations</pluralLabel>
</CustomObject>